--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -14,6 +14,7 @@ app-toolbar {
   font-family: 'Roboto', Helvetica, sans-serif;
   color: white;
   --app-toolbar-font-size: 24px;
+  box-shadow: none;
 }
 
 #profiletoolbar {
@@ -26,6 +27,7 @@ app-toolbar {
   padding: 12px 16px;
   font-size: 20px;
   font-weight: 500;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 #drawer > app-header-layout > iron-selector {
