Add some margin around content.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -28,6 +28,12 @@ app-toolbar {
   font-weight: 500;
 }
 
+#content {
+  padding: 16px;
+  margin: 24px;
+  border-radius: 5px;
+}
+
 #drawer > app-header-layout > iron-selector {
   cursor: pointer;
   > div > iron-icon {
