--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -62,6 +62,12 @@ app-drawer-layout:not([narrow]) [drawer-toggle] {
   background-color: #888;
 }
 
+.user-menu {
+  position: absolute;
+  right:10px;
+  cursor: pointer;
+}
+
 #drawerlogo{
   position: absolute;
   bottom: 150px;
