--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -62,18 +62,28 @@ app-drawer-layout:not([narrow]) [drawer-toggle] {
   background-color: #888;
 }
 
+.user-avatar-item{
+  position: absolute;
+  top:9px;
+  right:30px
+}
+
+.user-avatar{
+  margin-right: 8px;
+}
+
 .user-menu {
   position: absolute;
-  right:10px;
+  right:0px;
   cursor: pointer;
   color:white;
 }
 
 .user-menu-items{
-  min-width:150px !important;
+  min-width:140px !important;
   position: fixed; /* The position, top, and left makes user menu drop below the icon instead of on top */
-  top: 42px;
-  left:210px;
+  top: 40px;
+  left:222px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
               0 1px 5px 0 rgba(0, 0, 0, 0.12),
               0 3px 1px -2px rgba(0, 0, 0, 0.2); /* box-shadow and border-radius overwrites design caused by position:fixed */
