--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -19,6 +19,7 @@ app-toolbar {
 #profiletoolbar {
   background-color: #333333;
   font-size: 15px;
+  min-height: 80px;
 }
 
 .nav-menu > div {
@@ -47,7 +48,7 @@ app-toolbar {
   position: static;
 }
 
-#drawer > app-header-layout > iron-selector {
+#drawer > app-header-layout > div > iron-selector {
   cursor: pointer;
   > div > iron-icon {
     color: lightgray;
@@ -58,32 +59,46 @@ app-drawer-layout:not([narrow]) [drawer-toggle] {
   display: none;
 }
 
+.iron-selector-container{
+  display:flex;
+  flex-direction:column;
+  height:100%;
+}
+
+.nav-menu{
+  display:block;
+  flex:1;
+}
+
 .nav-menu > div.iron-selected {
   background-color: #888;
 }
 
-.user-avatar-item{
+.user-avatar{
+  width:55px;
+  height: 55px;
+  border-radius: 50%;
   position: absolute;
-  top:9px;
-  right:30px
+  bottom: 10px;
+  left:5px;
 }
 
-.user-avatar{
-  margin-right: 8px;
+.user-name{
+position: absolute;
+right:45px;
 }
 
 .user-menu {
   position: absolute;
   right:0px;
-  cursor: pointer;
-  color:white;
+  bottom:0px;
 }
 
 .user-menu-items{
-  min-width:140px !important;
+  min-width:125px !important;
   position: fixed; /* The position, top, and left makes user menu drop below the icon instead of on top */
-  top: 40px;
-  left:222px;
+  top: 65px;
+  right:-40px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
               0 1px 5px 0 rgba(0, 0, 0, 0.12),
               0 3px 1px -2px rgba(0, 0, 0, 0.2); /* box-shadow and border-radius overwrites design caused by position:fixed */
@@ -100,10 +115,9 @@ app-drawer-layout:not([narrow]) [drawer-toggle] {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 0px 1px 0 rgba(0, 0, 0, 0.12), 0 1px 1px -5px rgba(0, 0, 0, 0.2);
 }
 
-#drawerlogo{
-  position: absolute;
-  bottom: 150px;
-  left: 88px;
+.drawer-logo{
+  text-align:center;
+  padding-bottom:130px;
 }
 
 [hidden] {
