--- a/keycloak/themes/haven/account/resources/css/haven.css
+++ b/keycloak/themes/haven/account/resources/css/haven.css
@@ -193,12 +193,8 @@ a{
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
-    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
-    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+    local('MaterialIcons-Regular');
 }
 
 .material-icons {
