--- a/keycloak/themes/haven/login/resources/css/haven.css
+++ b/keycloak/themes/haven/login/resources/css/haven.css
@@ -10,12 +10,6 @@ body {
   flex-direction: column;
 }
 
-#kc-container{
-	flex:1;
-	-webkit-box-flex: 1;
-	-ms-flex: 1;
-}
-
 .align-center{
 	text-align: center;
 }
@@ -24,7 +18,7 @@ body {
 	padding-top:24px;
 }
 
-.header{
+.login-header{
   font-family: "mr-eaves-modern", 'Roboto', sans-serif;
   text-transform: uppercase;
   font-weight:700;
@@ -44,8 +38,10 @@ label {
   font-family: "ff-tisa-pro", serif;
 }
 
-.kc-form{
-	margin-top: 10px;
+.login-content-container{
+    flex:2;
+    -webkit-box-flex: 2;
+    -ms-flex: 2;
 }
 
 .login-btn{
@@ -62,7 +58,6 @@ label {
 	background-color:#f1f1f1;
 	overflow:hidden;
 	width:100%;
-	padding-top:40px;
 }
 
 footer{
@@ -85,9 +80,61 @@ footer a{
 	width:248px;
 }
 
+/* Login Totp config page */
+
+body.body-other-pages{
+    background-color: #f0f0f1;
+}
+
+header.header{
+    background-color: var(--mdc-theme-accent);
+    height: 64px;
+}
+
+.heading{
+    padding-bottom: 0px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #E4E4E4;
+}
+
+.heading h1{
+    font-family: serif;
+    color: #3f4145;
+    font-weight: 400;
+}
+
+.content-container-other{
+    padding-top:0px;
+    max-width:800px;
+}
+
+label {
+    font-family: "ff-tisa-pro", serif;
+}
+
+#TotpForm div.mdc-textfield, #TotpForm input {
+    width:100%;
+}
+
+#TotpForm{
+    margin:-55px 0px 0px 40px;
+}
+
+.form-btn{
+    float:right;
+    margin-top:20px;
+}
+
+@media screen and (max-width:330px){
+    #kc-totp-secret-qr-code{
+        margin-left:-25px;
+    }
+}
+
+/* */
 
 @media screen and (min-width: 768px){
-    .header{
+    .login-header{
         font-size: 62px;
     }
 }
