--- a/keycloak/themes/haven/account/resources/css/haven.css
+++ b/keycloak/themes/haven/account/resources/css/haven.css
@@ -10,6 +10,9 @@ body {
   display: flex;
   flex-direction: row;
   min-height: 100% !important;
+  font-size: 14px;
+  font-family: 'Roboto Slab', serif !important;
+  margin: auto;
 }
 
 header{
@@ -35,6 +38,11 @@ section.mdc-toolbar__section--align-start{
     padding-left:16px;
 }
 
+section.mdc-toolbar__section--align-end a{
+    font-size: 12px;
+    text-decoration: none;
+}
+
 button.menu{
     display: none;
     padding: 16px 0px;
@@ -42,6 +50,7 @@ button.menu{
 
 h1.mdc-toolbar__title{
     font-size: 20px;
+    margin-left: 0px;
 }
 
 .bs-sidebar{
@@ -55,23 +64,22 @@ nav.mdc-list{
 }
 
 nav.mdc-list > a{
-    font-family: serif !important;
-    font-size: 20px !important;
-    font-weight: 500 !important;
-    padding:29px 16px !important;
+    font-family: 'Roboto Slab', serif !important;
+    font-size: 19px !important;
+    padding:8px 16px !important;
 }
 
-.bs-sidebar nav a.mdc-persistent-drawer--selected, .bs-sidebar nav a.mdc-persistent-drawer--selected:hover, .bs-sidebar nav a.mdc-persistent-drawer--selected:focus {
-    background-color:#888 !important;
-    color: #3F4145 !important;
+.bs-sidebar nav a.mdc-persistent-drawer--selected {
+    background-color:#888 ;
+    color: #3F4145;
 }
 
 .mdc-persistent-drawer .mdc-list-item__start-detail{
     color:lightgray !important;
 }
 
-.bs-sidebar nav a.mdc-list-item:hover {
-    color: var(--mdc-theme-primary);
+a.mdc-list-item:focus, a.mdc-list-item:active{
+    -webkit-tap-highlight-color:transparent;
 }
 
 .nav-flex{
@@ -90,7 +98,6 @@ nav.mdc-list > a{
 }
 
 .main{
-/*    width: 200vw;     */
     padding:0px 30px;
 }
 
@@ -99,7 +106,9 @@ nav.mdc-list > a{
 }
 
 h2{
-    font-family: 'Roboto', sans-serif !important;
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    font-weight: 300;
 }
 
 a{
@@ -116,51 +125,136 @@ a:hover, a:focus{
 }
 .subtitle{
     align-self: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 label {
-    font-family: "ff-tisa-pro", serif;
-    bottom:0px !important;
+    font-family: 'Roboto Slab', serif;
 }
 
-#AccountForm > div{
-    margin-top:10px;
+.required {
+    color: #CB2915;
 }
 
-#AccountForm div.mdc-textfield, #AccountForm input, #PasswordForm div.mdc-textfield, #PasswordForm input, #TotpForm div.mdc-textfield, #TotpForm input {
-    width:100%;
+.alert{
+    border:2px solid transparent;
+    padding: 7px;
+	font-family: "mr-eaves-modern", 'Roboto', sans-serif;
+    margin-top: 30px;
+    margin-bottom: 0;
 }
 
-#AccountForm input.mdc-textfield__input, #AccountForm label.mdc-textfield__label,
-#PasswordForm input.mdc-textfield__input, #PasswordForm label.mdc-textfield__label,
-#TotpForm input.mdc-textfield__input, #TotpForm label.mdc-textfield__label
-{
-    font-size: initial;
+.alert i{
+    vertical-align: middle;
 }
 
-#TotpTable thead, #SessionsTable thead, #ApplicationsTable thead {
-    font-weight: 700;
-    font-size: 16px;
-    font-family: serif;
-    white-space: nowrap;
+.alert-text{
+    vertical-align: middle;
+    margin-left:10px;
 }
 
-#TotpForm{
-    margin: -35px 0px 0px 15px;
+.alert.alert-error{
+    background-color: #F8E7E7;
+    border-color: #B91415;
 }
+
+    .alert.alert-error i{
+        color: #B91416;
+    }
+
+.alert.alert-success {
+    background-color: #E4F1E1;
+    border-color: #4B9E39;
+}
+
+    .alert.alert-success i{
+        color: #4B9E39;
+    }
 
 .form-btn{
     float:right;
     margin-top:20px;
 }
 
+.form-btn button {
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+}
+
+#AccountForm div.mdc-textfield, #AccountForm input, #PasswordForm div.mdc-textfield, #PasswordForm input, #TotpForm div.mdc-textfield, #TotpForm input {
+    width:100%;
+}
+
+@table-condensed-cell-padding: @table-cell-padding/2;
+
+.table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 2rem;
+    background-color: transparent;
+}
+
+.table thead{
+    background-clip: padding-box;
+    background-color: #f9f9f9;
+    background-image: -webkit-linear-gradient(top, #fafafa 0%, #ededed 100%);
+    background-image: -o-linear-gradient(top, #fafafa 0%, #ededed 100%);
+    background-image: linear-gradient(to bottom, #fafafa 0%, #ededed 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffafafa', endColorstr='#ffededed', GradientType=0);
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    white-space: nowrap;
+}
+
+.table tr > th, .table tr > td {
+    text-align: left;
+    padding: 6px 10px;
+    vertical-align: top;
+    border-top: 0;
+}
+
+.table-bordered{
+    border: 1px solid #d1d1d1;
+    border-collapse:collapse;
+    border-spacing: 0;
+}
+
+.table-bordered > thead > tr > th, .table-bordered > tbody > tr > th, .table-bordered > thead > tr > td, .table-bordered > tbody > tr > td{
+    border: 1px solid #d1d1d1;
+}
+
+.table-bordered > thead > tr > th, .table-bordered > thead > tr > td{
+    border-bottom:2px solid #d1d1d1;
+}
+
+.table-striped > tbody > tr:nth-of-type(even) {
+    background-color: #f5f5f5;
+}
+
+
+
+.table-hover > tbody > tr:hover {
+    background-color:#E0E0E0;
+}
+
 .table-scroll{
     overflow-x: auto;
+}
+
+#TotpForm{
+    margin: -45px 0px 0px 15px;
 }
 
 ol {
     padding-left: 15px;
 } /* Authenticator Page */
+
+.code{
+    font-family: 'Roboto', sans-serif;
+}
 
 @media screen and (max-width:640px){
     button.menu{
@@ -218,47 +312,6 @@ ol {
     .totp-img{
         margin-left:-25px;
     }
-}
-
-/* Brought in from account.css */
-.required {
-    color: #CB2915;
-}
-
-.alert {
-    margin-top: 30px;
-    margin-bottom: 0;
-}
-
-.feedback-aligner .alert {
-    background-position: 1.27273em center;
-    background-repeat: no-repeat;
-    border-radius: 2px;
-    border-width: 1px;
-    color: #4D5258;
-    display: inline-block;
-    font-size: 1.1em;
-    line-height: 1.4em;
-    margin: 0;
-    padding: 0.909091em 3.63636em;
-    position: relative;
-    text-align: left;
-}
-.alert.alert-success {
-    background-color: #E4F1E1;
-    border-color: #4B9E39;
-}
-.alert.alert-error {
-    background-color: #F8E7E7;
-    border-color: #B91415;
-}
-.alert.alert-warning {
-    background-color: #FEF1E9;
-    border-color: #F17528;
-}
-.alert.alert-info {
-    background-color: #E4F3FA;
-    border-color: #5994B2;
 }
 
 /* Bootstrap drowpdown used on template header */
