--- a/keycloak/themes/haven/login/resources/css/haven.css
+++ b/keycloak/themes/haven/login/resources/css/haven.css
@@ -10,6 +10,32 @@ body {
   flex-direction: column;
 }
 
+/* ---------- MS Edge browser support ---------- */
+.mdc-layout-grid__cell--span-12{
+    width: 100%;
+}
+
+:not(.mdc-textfield--fullwidth):not(.mdc-textfield--box):not(.mdc-textfield--multiline).mdc-textfield--focused.mdc-textfield--upgraded::after, :not(.mdc-textfield--fullwidth):not(.mdc-textfield--box):not(.mdc-textfield--multiline).mdc-textfield--theme-dark.mdc-textfield--focused.mdc-textfield--upgraded::after, .mdc-theme--dark :not(.mdc-textfield--fullwidth):not(.mdc-textfield--box):not(.mdc-textfield--multiline).mdc-textfield--focused.mdc-textfield--upgraded::after {
+    background-color:#2FA09D;
+    background-color:var(--mdc-theme-primary,#2FA09D);
+    -webkit-transform: translateY(100%) scaleY(2);
+    transform: translateY(100%) scaleY(2);
+    -webkit-transition: -webkit-transform .18s cubic-bezier(.4,0,.2,1);
+    transition: -webkit-transform .18s cubic-bezier(.4,0,.2,1);
+    transition: transform .18s cubic-bezier(.4,0,.2,1);
+    transition: transform .18s cubic-bezier(.4,0,.2,1),-webkit-transform .18s cubic-bezier(.4,0,.2,1);
+}
+
+.mdc-textfield__input, .mdc-textfield--focused{
+    background-color: transparent !important;
+}
+
+.mdc-textfield__label--float-above{
+    color: #2FA09D !important;
+    color: var(--mdc-theme-primary,#2FA09D);
+}
+/* ---------- END MS Edge browser support ---------- */
+
 .align-center{
 	text-align: center;
 }
@@ -35,18 +61,21 @@ body {
 }
 
 label {
-  font-family: "ff-tisa-pro", serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 .login-content-container{
     flex:2;
     -webkit-box-flex: 2;
     -ms-flex: 2;
+    padding-top:0px;
 }
 
 .login-btn{
-	padding: 10px 70px;
-	font-size: 13px;
+    height: 42px !important;
+    width: 200px !important;
+    background-color: #2fa09d;
+    color: white;
 	line-height: 1.3333333;
 	border-radius: 25px;
 	margin-top:5px;
@@ -63,7 +92,7 @@ label {
 .alert{
     border:2px solid transparent;
     padding: 7px;
-    font-family: sans-serif;
+	font-family: "mr-eaves-modern", 'Roboto', sans-serif;
 }
 
 .alert i{
@@ -157,7 +186,7 @@ header.header{
 }
 
 .heading h1{
-    font-family: serif;
+    font-family: 'Roboto', sans-serif;
     color: #3f4145;
     font-weight: normal;
 }
@@ -167,8 +196,12 @@ header.header{
     max-width:800px;
 }
 
-label {
-    font-family: "ff-tisa-pro", serif;
+p{
+    font-family: 'Roboto Slab', serif;
+}
+
+h2{
+    font-weight: normal;
 }
 
 #TotpForm div.mdc-textfield, #TotpForm input {
@@ -182,6 +215,12 @@ label {
 .form-btn{
     float:right;
     margin-top:20px;
+}
+
+.form-btn button {
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 5px;
 }
 
 @media screen and (max-width:330px){
