--- a/keycloak/themes/haven/account/resources/css/haven.css
+++ b/keycloak/themes/haven/account/resources/css/haven.css
@@ -187,8 +187,6 @@ label {
     width:100%;
 }
 
-@table-condensed-cell-padding: @table-cell-padding/2;
-
 .table {
     width: 100%;
     max-width: 100%;
@@ -234,8 +232,6 @@ label {
     background-color: #f5f5f5;
 }
 
-
-
 .table-hover > tbody > tr:hover {
     background-color:#E0E0E0;
 }
@@ -255,6 +251,17 @@ ol {
 
 .code{
     font-family: 'Roboto', sans-serif;
+}
+
+@media screen and (min-width:640px) {
+    .lg-screen-drawer{
+        width: 240px;
+        pointer-events: auto;
+    }
+    .lg-screen-drawer .mdc-persistent-drawer__drawer{
+        -webkit-transform: none;
+        transform: none;
+    }
 }
 
 @media screen and (max-width:640px){
@@ -298,14 +305,6 @@ ol {
         position: absolute;
         left: 0;
         height: 100%;
-    }
-    .sm-screen-drawer.mdc-persistent-drawer--open {
-     width:100%;
-     height:100%;
-   }
-
-   .sm-screen-drawer .nav-flex {
-      overflow-y:scroll;
     }
 }
 
