--- a/webui/src/main.scss
+++ b/webui/src/main.scss
@@ -134,13 +134,14 @@ right:45px;
 .header-container{
   background-color:#fff;
   padding-top:48px;
-  padding-bottom: 150px;
+  padding-bottom: 144px;
 }
 
 .login-header{
   text-transform: uppercase;
   font-family: "mr-eaves-modern",sans-serif;
-  margin-top: 27px;
+  margin-top: 21px;
+  margin-bottom: 20px;
 }
 
 .text-success{
@@ -153,7 +154,7 @@ right:45px;
 
 .login-btn{
   height: 38px;
-  width: 180px;
+  width: 220px;
   border-radius: 25px;
   font-size: 13px;
   font-family: "mr-eaves-modern",sans-serif;
@@ -161,7 +162,7 @@ right:45px;
 }
 
 #wireframe-container{
-  margin-top: -150px;
+  margin-top: -144px;
 }
 
 .img-sm, .img-lg{
