--- a/keycloak/themes/haven/login/resources/css/haven.css
+++ b/keycloak/themes/haven/login/resources/css/haven.css
@@ -102,8 +102,8 @@ label {
 	border-radius: 25px;
 	margin-top:5px;
     margin-bottom: 20px;
-	font-size: 12px;
-	font-weight: bold;
+	font-size: 13px;
+  font-family: "mr-eaves-modern", sans-serif;
 }
 
 .bottom-container{
@@ -240,19 +240,24 @@ h2{
     margin-top:-20px;
 }
 
+.code{
+  font-family: "mr-eaves-modern", sans-serif;
+  font-size: 16px;
+}
+
 .form-btn{
     float:right;
     margin-top:20px;
 }
 
 .form-btn button {
-    font-size: 12px;
-    font-weight: bold;
+    font-size: 13px;
+    font-family: "mr-eaves-modern", sans-serif;
     border-radius: 5px;
 }
 
 @media screen and (max-width:330px){
-    #kc-totp-secret-qr-code{
+    #kc-totp-secret-qr-code, .code{
         margin-left:-25px;
     }
 }
