css change for login page
Makes root full width. Fixing the whole page offset to left.
Signed-off-by: Lauren Behan <lauren.caitlan@gmail.com>

--- a/webui/src/main.scss
+++ b/webui/src/main.scss
@@ -14,6 +14,10 @@ body {
   min-height: 100%;
 }
 
+#root{
+  flex: 1;
+}
+
 .elm-overlay {
   /* make sure the elm time-travel control is on top */
   z-index: 999;
