Switch header color on themes.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/keycloak/themes/haven/account/resources/css/haven.css
+++ b/keycloak/themes/haven/account/resources/css/haven.css
@@ -16,7 +16,7 @@ body {
 }
 
 header{
-    background-color: var(--mdc-theme-accent) !important;
+    background-color: var(--mdc-theme-primary) !important;
     color: var(--mdc-theme-text-primary-on-primary,#fff);
 }
 
