initial user avatar
Signed-off-by: David Streeter <dstreet26@gmail.com>

--- a/webui/src/main2.scss
+++ b/webui/src/main2.scss
@@ -5,6 +5,12 @@
 }
 
 
+.user-avatar {
+    margin-top: -10px;
+    border-radius: 10px;
+    max-height: 37px;
+}
+
 // @import "node_modules/daemonite-material/assets/scss/material";
 // @include media-breakpoint-up(lg) {
 //   .content-wrapper {
