--- a/keycloak/themes/haven/account/resources/css/haven.css
+++ b/keycloak/themes/haven/account/resources/css/haven.css
@@ -1,124 +1,104 @@
-html{
-    height: 100%;
+
+:root{
+  --primary:#2FA09D;
+  --primary-dark:darken(#2FA09D, 30%)
+  --primary-light:lighten(#2FA09D, 30%);
+  --secondary:#E86953;
+  --secondary-dark: darken(#E86953, 30%);
+  --secondary-light: lighten(#E86953, 30%);
+  --body-bg:#f0f0f1;
+}
+
+.bg-primary, .btn-primary{
+  background-color: var(--primary) !important;
+}
+
+.bg-secondary, .btn-secondary{
+  background-color: var(--secondary) !important;
+}
+
+.btn-flat-secondary, .btn-flat-secondary:active, .btn-flat-secondary:focus, .btn-flat-secondary:hover,
+.btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary:focus, .btn-outline-secondary:hover{
+  color: var(--secondary);
 }
 
 body {
-  --mdc-theme-primary:#2FA09D;
-  --mdc-theme-accent:#E86953;
-  --mdc-theme-background: #f0f0f1;
-  background-color:var(--mdc-theme-background, #f0f0f1);
-  display: flex;
-  flex-direction: row;
-  min-height: 100% !important;
-
-  font-family:"ff-tisa-web-pro",serif ;
-  margin: auto;
+  background-color:var(--body-bg) !important;
+  font-family: Arial, sans-serif;
+  font-size: 16px !important;
 }
 
-
-header > .mdc-toolbar__row{
-    min-height:64px;
+header{
+  height:64px;
 }
 
-header a{
-    color: var(--mdc-theme-text-primarymary-on-primary);
+header.navbar ul.navbar-nav a.nav-link{
+  font-size:14px !important;
 }
 
-header a:hover, header a:focus{
-    color:#3f4145;
-    text-decoration: none;
-}
-
-section.mdc-toolbar__section--align-start{
-    flex: 2;
-    padding-left:16px;
-}
-
-section.mdc-toolbar__section--align-end a{
-    font-size: 12px;
-    text-decoration: none;
-}
-
-button.menu{
-    display: none;
-    padding: 16px 0px;
-}
-
-h1.mdc-toolbar__title{
-    font-size: 20px;
-    margin-left: 0px;
-}
-
-.bs-sidebar{
-    background-color:#fff;
-    border-right-width: 2px;
-    width: 256px;
-}
-
-nav.mdc-list{
-    padding-top:0px;
-}
-
-nav.mdc-list > a{
+nav.navdrawer-nav a{
     font-family:"ff-tisa-web-pro",serif !important;
     font-size: 20px !important;
-    padding:8px 16px !important;
 }
 
-.bs-sidebar nav a.mdc-persistent-drawer--selected {
-    background-color:#888 ;
-    color: #3F4145;
+.navdrawer-nav .nav-link i{
+  color: lightgray;
 }
 
-.mdc-persistent-drawer .mdc-list-item__start-detail{
-    color:lightgray !important;
+.navdrawer-nav .nav-link.active, .navdrawer-nav .nav-link:active {
+  background-color:#888 ;
+  color: #3F4145;
 }
 
-a.mdc-list-item:focus, a.mdc-list-item:active{
+a.nav-link:focus, a.nav-link:active{
     -webkit-tap-highlight-color:transparent;
 }
 
-.nav-flex{
-    flex:1; /* keeps .drawer-logo at bottom and not overlaying rest of menu */
+div.navdrawer-content{
+  display: inline-grid;
 }
 
 .drawer-logo{
     text-align: center;
-    padding-bottom: 10px;
-}
-.content{
-    display: inline-flex;
-    flex-direction: column;
-    flex-grow: 1;
-    height: 100%;
+    padding-bottom: 15px;
+    align-self: flex-end;
 }
 
-.main{
-    padding:0px 30px;
+/*Keep this for when keycloak has a build process*/
+/*.doc-main {
+  @include media-breakpoint-up(lg) {
+    .navdrawer-permanent-lg ~ & {
+      margin-left: $navdrawer-width;
+    }
+  }
+}*/
+
+.custom-select:focus, .form-control-file:focus, .form-control:focus, .custom-select:hover, .form-control-file:hover, .form-control:hover {
+    border-color: var(--primary);
+    box-shadow: inset 0 -2px 0 -1px var(--primary);
+    outline: 0;
+} /*This overwrites the form lines being black*/
+
+button{
+  font-family: "mr-eaves-modern", sans-serif;
 }
 
-.container-margin{
-    margin:0px 10px;
+@media screen and (min-width:992px){
+  main.ml-lg-5{
+    margin-left: 15rem !important;
+  }
 }
 
 h2{
     font-family: "ff-tisa-web-pro", serif;
     font-size: 28px;
-    font-weight: 500;
-}
-
-a{
-    color:var(--mdc-theme-accent)
-}
-
-a:hover, a:focus{
-    color: var(--mdc-theme-primary);
 }
 
 .heading{
     border-bottom: 2px solid #e4e4e4;
     padding: 16px 5px;
 }
+
 .subtitle{
     align-self: center;
     font-family: "mr-eaves-modern", sans-serif;
@@ -132,187 +112,54 @@ label {
     color: #CB2915;
 }
 
-.alert{
-    border:2px solid transparent;
-    padding: 7px;
-	  font-family: "Arial", sans-serif;
-    margin-top: 30px;
-    margin-bottom: 0;
-}
-
 .alert i{
-    vertical-align: middle;
-}
-
-.alert-text{
-    vertical-align: middle;
-    margin-left:10px;
+    vertical-align: bottom;
+    margin-right:10px;
 }
 
 .alert.alert-error{
-    background-color: #F8E7E7;
-    border-color: #B91415;
+    background-color: #F7DEDE;
 }
 
     .alert.alert-error i{
         color: #B91416;
     }
 
-.alert.alert-success {
-    background-color: #E4F1E1;
-    border-color: #4B9E39;
-}
-
     .alert.alert-success i{
         color: #4B9E39;
     }
 
-.form-btn{
-    float:right;
-    margin-top:20px;
-}
-
-#AccountForm div.mdc-textfield, #AccountForm input, #PasswordForm div.mdc-textfield, #PasswordForm input, #TotpForm div.mdc-textfield, #TotpForm input {
-    width:100%;
-}
-
-.table {
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 2rem;
-    background-color: transparent;
-}
-
-.table thead{
-    background-clip: padding-box;
-    background-color: #f9f9f9;
-    background-image: -webkit-linear-gradient(top, #fafafa 0%, #ededed 100%);
-    background-image: -o-linear-gradient(top, #fafafa 0%, #ededed 100%);
-    background-image: linear-gradient(to bottom, #fafafa 0%, #ededed 100%);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffafafa', endColorstr='#ffededed', GradientType=0);
-    font-weight: 700;
-    font-family: "mr-eaves-modern", sans-serif;
-    white-space: nowrap;
-}
-
-.table tr > th, .table tr > td {
-    text-align: left;
-    padding: 6px 10px;
-    border-top: 0;
-}
-
-tbody tr > td{
-  font-family: Arial;
-}
-
-.table-bordered{
-    border: 1px solid #d1d1d1;
-    border-collapse:collapse;
-    border-spacing: 0;
-}
-
-.table-bordered > thead > tr > th, .table-bordered > tbody > tr > td{
-    border: 1px solid #d1d1d1;
-}
-
-.table-bordered > thead > tr > th{
-    border-bottom:2px solid #d1d1d1;
-}
-
-.table-striped > tbody > tr:nth-of-type(even) {
-    background-color: #f5f5f5;
-}
-
-.table-hover > tbody > tr:hover {
-    background-color:#E0E0E0;
-}
-
 .invisible-btn{
   background-color: transparent;
   border: none;
-  color: var(--mdc-theme-accent);
+  color: var(--secondary);
 }
 
 .invisible-btn:hover, .invisible-btn:focus{
-  color: var(--mdc-theme-primary);
+  color: var(--primary);
   outline: none;
+  cursor: pointer;
 }
 
-.table-scroll{
-    overflow-x: auto;
+/* Authenticator Page */
+ol#AccountForm{
+  font-family:"ff-tisa-web-pro",serif ;
 }
 
-#TotpForm{
-    margin: -45px 0px 0px 15px;
+#TotpTable thead tr th{
+  font-weight: 700;
+  font-family: "mr-eaves-modern", sans-serif;
+  font-size: 18px;
+  color:#3F4145;
 }
-
-ol {
-    padding-left: 15px;
-} /* Authenticator Page */
 
 .code{
     font-family: "mr-eaves-modern", sans-serif;
 }
 
-@media screen and (min-width:640px) {
-    .lg-screen-drawer{
-        width: 240px;
-        pointer-events: auto;
-    }
-    .lg-screen-drawer .mdc-persistent-drawer__drawer{
-        -webkit-transform: none;
-        transform: none;
-    }
-}
-
-@media screen and (max-width:640px){
-    button.menu{
-        display: inherit;
-    }
-
-    .sm-screen-drawer{
-        position: fixed;
-        top: 0;
-        left: 0;
-        overflow: hidden;
-        contain: strict;
-        z-index: 3;
-    }
-
-    .sm-screen-drawer.mdc-persistent-drawer--open {
-         width:100%;
-         height:100%;
-       }
-
-       .sm-screen-drawer .nav-flex {
-          overflow-y:scroll;
-        }
-
-    .mdc-persistent-drawer:before {
-        display: block;
-        top: 0;
-        width: 100%;
-        background: rgba(0,0,0,.6);
-        content: "";
-        opacity: 0;
-        will-change: opacity;
-    }
-
-    .mdc-persistent-drawer--open:before {
-        opacity: 1;
-    }
-
-    .mdc-persistent-drawer:before, .mdc-persistent-drawer__drawer {
-        position: absolute;
-        left: 0;
-        height: 100%;
-    }
-}
-
 @media screen and (max-width:330px){
     .totp-img{
-        margin-left:-25px;
+        margin-left:-8px;
     }
 }
 
