adding material icons font to local repo instead of thrid-party remote
Signed-off-by: Kevin N. Murphy <knmurphy@users.noreply.github.com>

--- a/webui/src/main.scss
+++ b/webui/src/main.scss
@@ -11,6 +11,17 @@ $secondary: (
 );
 $yiq-contrasted-threshold:  160;
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(public/fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(public/fonts/MaterialIcons-Regular.woff2) format('woff2'),
+    url(public/fonts/MaterialIcons-Regular.woff) format('woff'),
+    url(public/fonts/MaterialIcons-Regular.ttf) format('truetype');
+}
 
 @import "node_modules/daemonite-material/assets/scss/material";
 
